<resources>
    <string name="app_name">302_Java_Application</string>

    <!--    Headings     -->
    <string name="top_picks">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="home_page">Home Page</string>
    <string name="search_hint">Search</string>
    <string name="browse_page">Browse</string>
    <string name="recent_search">Recently Searched</string>

    <string name="girl_group">Girl Group</string>
    <string name="boy_group">Boy Group</string>
    <string name="solo">Soloist</string>


</resources>